--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -8,5 +8,14 @@
  <p th:text="${numGuests}"></p>
  <p th:text="${in}"></p>
  <p th:text="${out}"></p>
+<p th:text="${lista}"></p>
+
+<table>
+    <tbody>
+    <tr th:each="entry : ${lista}">
+        <td th:text="${entry.roomNumber}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
