small name changese

--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -18,8 +18,10 @@
     <label for="out">Utchecknings datum</label>
     <input type="date" id="out" name="out" value="2024-05-01" min="2024-01-01" max="2024-12-31" />
 
-    <input type="submit" value="Boka">
+    <input type="submit" value="Sök">
 </form>
+
+
 
 </body>
 </html>
