--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -14,6 +14,7 @@
     <tbody>
     <tr th:each="entry : ${lista}">
         <td th:text="${entry.roomNumber}"></td>
+        <td th:text="${entry.roomType}"></td>
     </tr>
     </tbody>
 </table>
