unfinished stuff for thymeleaf

--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-
+<div>
 <form action="bookReceival" method="post">
     <label for="numGuests">Antal gäster</label>
     <input type="number" id="numGuests" name="numGuests" value="1" min="1" max="4">
@@ -20,7 +20,9 @@
 
     <input type="submit" value="Sök">
 </form>
+</div>
 
+ 
 
 
 </body>
