--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -7,6 +7,19 @@
 <body>
 <table>
     <tbody>
+    <div>
+        <form action="bookReceival" method="post">
+
+            <label for="in">Inchecknings datum</label>
+            <input type="date" id="in" name="in" th:value="${in}" min="2024-01-01" max="2024-12-31" />
+            <label for="out">Utchecknings datum</label>
+            <input type="date"  id="out" name="out" th:value="${out}" min="2024-01-01" max="2024-12-31" />
+            <label for="numGuests">Antal gäster</label>
+            <input type="number" id="numGuests" name="numGuests" th:value="${numGuests}" min="1" max="4">
+            <input type="submit" value="Sök">
+        </form>
+    </div>
+
     <tr th:each="entry : ${lista}">
         <td th:text="${entry.roomNumber}"></td>
         <td th:text="${entry.roomType}"></td>
@@ -14,6 +27,21 @@
         <td><input name="room" type="radio"/></td>
     </tr>
     </tbody>
+</table>
+<table>
+    <tr>
+        <td>
+            <form action="TODO" method="post">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" /><br><br>
+                <label for="name">Namn</label>
+                <input type="text" id="name" name="name"/><br><br>
+                <label for="phone">Telefon</label>
+                <input type="tel" id="phone" name="phone"/><br><br>
+                <input type="submit" value="Boka">
+            </form>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
