--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -8,8 +8,13 @@
 
 <h1>Bokningsbekräftelse</h1>
 
-<p th:text="${bokning}"></p>
+<p th:text="'Incheckningsdatum: ' + ${in}"></p>
+<p th:text="'Utcheckningsdatum: ' + ${out}"></p>
+<br>
+<p th:text="'Antal gäster: ' + ${numGuests}"></p>
+<p th:text="'Rum: ' + ${roomNumber}"></p>
 
+<br><br>
 <button><a href="/book">Gå tillbaka till start</a> </button>
 
 </body>
