--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -6,39 +6,45 @@
 </head>
 <body>
 <table>
-    <tbody>
-    <div>
-        <form action="bookReceival" method="post">
-
-            <label for="in">Inchecknings datum</label>
-            <input type="date" id="in" name="in" th:value="${in}" min="2024-01-01" max="2024-12-31" />
-            <label for="out">Utchecknings datum</label>
-            <input type="date"  id="out" name="out" th:value="${out}" min="2024-01-01" max="2024-12-31" />
-            <label for="numGuests">Antal gäster</label>
-            <input type="number" id="numGuests" name="numGuests" th:value="${numGuests}" min="1" max="4">
-            <input type="submit" value="Sök">
-        </form>
-    </div>
-
-    <tr th:each="entry : ${lista}">
-        <td th:text="${entry.roomNumber}"></td>
-        <td th:text="${entry.roomType}"></td>
-        <td th:text="${entry.pricePerNight}+':-'"></td>
-        <td><input name="room" type="radio"/></td>
-    </tr>
-    </tbody>
-</table>
-<table>
     <tr>
         <td>
-            <form action="TODO" method="post">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" /><br><br>
-                <label for="name">Namn</label>
-                <input type="text" id="name" name="name"/><br><br>
-                <label for="phone">Telefon</label>
-                <input type="tel" id="phone" name="phone"/><br><br>
-                <input type="submit" value="Boka">
+            <div th:if="${missingCustomer}">
+                <p><em>Ingen användare hittades med den emailen. Vänligen fyll i alla fält för att registrera en ny kund och genomföra bokningen.</em></p>
+            </div>
+            <form action="createbooking" method="post">
+                <label for="email">Email</label><br>
+                <input type="email" id="email" name="email" required/>
+                <div th:if="${missingCustomer}">
+                <label for="name">Namn</label><br>
+                <input type="text" id="name" name="name" required/><br>
+                <label for="phone">Telefon</label><br>
+                <input type="tel" id="phone" name="phone" required/>
+                </div><br><br>
+                <label for="in">Inchecknings datum</label>
+                <input type="date" id="in" name="in" th:value="${in}" min="2024-01-01" max="2024-12-31" readonly/><br>
+                <label for="out">Utchecknings datum</label>
+                <input type="date"  id="out" name="out" th:value="${out}" min="2024-01-01" max="2024-12-31" readonly/><br>
+                <label for="numGuests">Antal gäster</label>
+                <input type="number" id="numGuests" name="numGuests" th:value="${numGuests}" min="1" max="4" readonly><br>
+                <h5>Tillgängliga rum för valda datum.</h5>
+                    <table>
+                            <th:block th:each="entry : ${listOfRooms}">
+                            <tr>
+                            <td>
+                                <input type="radio" name="roomNumber" th:value="${entry.roomNumber}" required>
+                                <label th:for="${entry.roomNumber}"><span th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType}"></span></label>
+                            </td>
+                            </tr>
+                                <br><br>
+                                <input type="submit" value="Boka">
+                            </th:block>
+                            <th:block th:if="${#lists.isEmpty(listOfRooms)}">
+                                <p>Inga tillgängliga rum.</p>
+                                <br>
+                                <button><a href="/book">Gå tillbaka</a></button>
+                            </th:block>
+                    </table>
+
             </form>
         </td>
     </tr>
