--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <table>
@@ -31,7 +32,7 @@
                             <th:block th:each="entry : ${listOfRooms}">
                             <tr>
                             <td>
-                                <input type="radio" name="roomNumber" th:checked="${entry.roomNumber == roomNumber}" required>
+                                <input type="radio" id="roomNumber" name="roomNumber" th:value="${entry.roomNumber}" required>
                                 <label th:for="${entry.roomNumber}"><span th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType}"></span></label>
                             </td>
                             </tr>
