--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,8 +32,8 @@
 <div class="container mt-4">
     <h1 class="text-center">Startsida</h1><br><br>
     <div class="btn-group">
-        <a href="" class="btn btn-primary btn-lg">Sök lediga</a>
-        <a href="" class="btn btn-primary btn-lg">Sök bokningar</a>
+        <a href="/book" class="btn btn-primary btn-lg">Sök lediga</a>
+        <a href="/bookings/search" class="btn btn-primary btn-lg">Sök bokningar</a>
         <a href="/customer/search" class="btn btn-primary btn-lg" >Ändra kund</a>
     </div>
 </div>
