--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -11,12 +11,12 @@
 <body>
 <div>
 <form action="bookReceival" method="post">
-    <label for="in">Inchecknings datum</label>
-    <input type="date" id="in" name="in" value="2024-05-01" min="2024-01-01" max="2024-12-31" />
-    <label for="out">Utchecknings datum</label>
-    <input type="date" id="out" name="out" value="2024-05-01" min="2024-01-01" max="2024-12-31" />
-    <label for="numGuests">Antal gäster</label>
-    <input type="number" id="numGuests" name="numGuests" value="1" min="1" max="4">
+    <label for="checkInDate">Inchecknings datum</label>
+    <input type="date" id="checkInDate" name="checkInDate" value="2024-05-01" min="2024-01-01" max="2024-12-31" />
+    <label for="checkOutDate">Utchecknings datum</label>
+    <input type="date" id="checkOutDate" name="checkOutDate" value="2024-05-01" min="2024-01-01" max="2024-12-31" />
+    <label for="bookedBeds">Antal gäster</label>
+    <input type="number" id="bookedBeds" name="bookedBeds" value="1" min="1" max="4">
     <input type="submit" value="Sök">
 </form>
 </div>
