--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -21,12 +21,12 @@
                 <label for="phone">Telefon</label><br>
                 <input type="tel" id="phone" name="phone" required/>
                 </div><br><br>
-                <label for="in">Inchecknings datum</label>
-                <input type="date" id="in" name="in" th:value="${in}" min="2024-01-01" max="2024-12-31" readonly/><br>
-                <label for="out">Utchecknings datum</label>
-                <input type="date"  id="out" name="out" th:value="${out}" min="2024-01-01" max="2024-12-31" readonly/><br>
-                <label for="numGuests">Antal gäster</label>
-                <input type="number" id="numGuests" name="numGuests" th:value="${numGuests}" min="1" max="4" readonly><br>
+                <label for="checkInDate">Inchecknings datum</label>
+                <input type="date" id="checkInDate" name="checkInDate" th:value="${book.checkInDate}" min="2024-01-01" max="2024-12-31" readonly/><br>
+                <label for="checkOutDate">Utchecknings datum</label>
+                <input type="date"  id="checkOutDate" name="checkOutDate" th:value="${book.checkOutDate}" min="2024-01-01" max="2024-12-31" readonly/><br>
+                <label for="bookedBeds">Antal gäster</label>
+                <input type="text" id="bookedBeds" name="bookedBeds" th:value="${book.bookedBeds}" readonly><br>
                 <h5>Tillgängliga rum för valda datum.</h5>
                     <table>
                             <th:block th:each="entry : ${listOfRooms}">
