--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -33,7 +33,7 @@
                             <tr>
                             <td>
                                 <input type="radio" id="roomNumber" name="roomNumber" th:value="${entry.roomNumber}" required>
-                                <label th:for="${entry.roomNumber}"><span th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType}"></span></label>
+                                <label th:for="${entry.roomNumber}"><span th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType} + ' - ' + ${entry.pricePerNight} + 'kr per natt'"></span></label>
                             </td>
                             </tr>
                             </th:block>
