--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -5,20 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .navbar {
+            background-color: #007bff;
+            height: 80px;
+        }
+        .navbar-brand {
+            color: #fff;
+            font-size: 40px;
+        }
+        .nav-link {
+            color: #fff;
+            font-size: 20px;
+        }
+        .container {
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
-<div>
+<div class="container"> <!-- Centrerad behållare för navigeringsmenyn -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="/"><i>Startsida</i></a> <!-- Länk till startsidan -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/book">Sök lediga rum</a> <!-- Länk till sök lediga rum -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/bookings/search">Sök bokningar</a> <!-- Länk till sök bokningar -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/customer/search">Ändra kund</a> <!-- Länk till ändra kund -->
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+<div class="container">
+<h1 class="text-center mb-40">Sök lediga rum</h1>
+<div class="form-container">
 <form action="bookReceival" method="post">
+    <div class="row mb-4 mt-8">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
     <label for="checkInDate">Inchecknings datum</label>
-    <input type="date" id="checkInDate" name="checkInDate"/>
+    <input type="date" id="checkInDate" name="checkInDate" value="" class="form-control"/>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
     <label for="checkOutDate">Utchecknings datum</label>
-    <input type="date" id="checkOutDate" name="checkOutDate"/>
+    <input type="date" id="checkOutDate" name="checkOutDate" class="form-control"/>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
     <label for="bookedBeds">Antal gäster</label>
-    <input type="number" id="bookedBeds" name="bookedBeds" value="1" min="1" max="4">
-    <input type="submit" value="Sök">
+    <input type="number" id="bookedBeds" name="bookedBeds" value="1" min="1" max="4"><br><br>
+    <input type="submit" value="Sök"  class="btn btn-success">
+        </div>
+    </div>
 </form>
+<div>
 </div>
 
 <script>
@@ -28,7 +85,6 @@
 
         checkInDateInput.addEventListener("change", function() {
             const checkInDate = new Date(checkInDateInput.value);
-
             const checkOutDate = new Date(checkOutDateInput.value);
 
             if (checkInDate >= checkOutDate) {
