--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -5,20 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         .navbar {
             background-color: #007bff;
+            backdrop-filter: blur(10px);
             height: 80px;
         }
+
         .navbar-brand {
             color: #fff;
             font-size: 40px;
         }
+
         .nav-link {
             color: #fff;
             font-size: 20px;
         }
+
         .container {
             margin-top: 30px;
         }
@@ -48,69 +54,77 @@
     </nav>
 </div>
 
-<div class="container">
-<h1 class="text-center mb-40">Sök lediga rum</h1>
-<div class="form-container">
-<form action="bookReceival" method="post">
-    <div class="row mb-4 mt-8">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-    <label for="checkInDate">Inchecknings datum</label>
-    <input type="date" id="checkInDate" name="checkInDate" value="" class="form-control"/>
+<div class="container ">
+    <h1 class="text-center" style="margin-bottom: 3rem; margin-top: 5rem;">Sök lediga rum</h1>
+    <div class="form-container">
+        <form action="bookReceival" method="post">
+            <div class="row mb-4 mt-8">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <label class="mb-1" for="checkInDate">Incheckningsdatum</label>
+                    <input type="date" id="checkInDate" name="checkInDate" value="" class="form-control"/>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <label class="mb-1" for="checkOutDate">Utcheckningsdatum</label>
+                    <input type="date" id="checkOutDate" name="checkOutDate" class="form-control"/>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <label class="mb-1" for="bookedBeds">Antal gäster</label>
+                    <input class="form-control" type="number" id="bookedBeds" name="bookedBeds" value="1" min="1" max="4"><br>
+                    <div>
+                        <input type="submit" value="Sök" class="btn btn-success form-control">
+                    </div>
+                    </div>
+                </div>
+        </form>
+        <div>
         </div>
-    </div>
-    <div class="row mb-4">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-    <label for="checkOutDate">Utchecknings datum</label>
-    <input type="date" id="checkOutDate" name="checkOutDate" class="form-control"/>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-    <label for="bookedBeds">Antal gäster</label>
-    <input type="number" id="bookedBeds" name="bookedBeds" value="1" min="1" max="4"><br><br>
-    <input type="submit" value="Sök"  class="btn btn-success">
-        </div>
-    </div>
-</form>
-<div>
-</div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const checkInDateInput = document.getElementById("checkInDate");
-        const checkOutDateInput = document.getElementById("checkOutDate");
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const checkInDateInput = document.getElementById("checkInDate");
+                const checkOutDateInput = document.getElementById("checkOutDate");
 
-        checkInDateInput.addEventListener("change", function() {
-            const checkInDate = new Date(checkInDateInput.value);
-            const checkOutDate = new Date(checkOutDateInput.value);
+                checkInDateInput.addEventListener("change", function () {
+                    const checkInDate = new Date(checkInDateInput.value);
+                    const checkOutDate = new Date(checkOutDateInput.value);
 
-            if (checkInDate >= checkOutDate) {
-                checkOutDate.setDate(checkInDate.getDate() + 1);
-                checkOutDateInput.valueAsDate = checkOutDate;
-            }
+                    if (checkInDate >= checkOutDate) {
+                        checkOutDate.setDate(checkInDate.getDate() + 1);
+                        checkOutDateInput.valueAsDate = checkOutDate;
+                    }
 
-            checkOutDateInput.min = checkInDateInput.value;
+                    checkOutDateInput.min = checkInDateInput.value;
 
-            checkInDateInput.min = null;
-        });
+                    checkInDateInput.min = null;
+                });
 
-        checkOutDateInput.addEventListener("change", function() {
-            const checkInDate = new Date(checkInDateInput.value);
-            const checkOutDate = new Date(checkOutDateInput.value);
+                checkOutDateInput.addEventListener("change", function () {
+                    const checkInDate = new Date(checkInDateInput.value);
+                    const checkOutDate = new Date(checkOutDateInput.value);
 
-            if (checkOutDate <= checkInDate) {
-                checkOutDate.setDate(checkInDate.getDate() + 1);
-                checkOutDateInput.valueAsDate = checkOutDate;
-            }
+                    if (checkOutDate <= checkInDate) {
+                        checkOutDate.setDate(checkInDate.getDate() + 1);
+                        checkOutDateInput.valueAsDate = checkOutDate;
+                    }
 
-            checkOutDateInput.min = checkInDateInput.value;
-            checkInDateInput.min = null;
-        });
-    });
-</script>
+                    checkOutDateInput.min = checkInDateInput.value;
+                    checkInDateInput.min = null;
+                });
+            });
+        </script>
 
 
 </body>
