--- a/src/main/resources/templates/createCustomer.html
+++ b/src/main/resources/templates/createCustomer.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-<div class="container"> <!-- Centrerad behållare för navigeringsmenyn -->
+<div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/"><i>Startsida</i></a> <!-- Länk till startsidan -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -60,7 +60,7 @@
         </div>
         <div class="form-group">
             <label for="email">E-post:</label>
-            <input type="text" class="form-control" id="email" name="email">
+            <input type="text" class="form-control" id="email" name="email" required>
         </div>
         <button type="submit" class="btn btn-primary">Skapa</button>
         <a href="/customer/search" class="btn btn-danger">Avbryt</a><br><br>
