--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .navbar {
             background-color: #007bff;
+            backdrop-filter: blur(10px);
             height: 80px;
         }
+
         .navbar-brand {
             color: #fff;
             font-size: 40px;
         }
+
         .nav-link {
             color: #fff;
             font-size: 20px;
         }
+
         .container {
             margin-top: 30px;
         }
@@ -45,54 +49,86 @@
         </div>
     </nav>
 </div>
-<table>
-    <tr>
-        <td>
-            <div th:if="${missingCustomer}">
-                <p><em>Ingen användare hittades med den emailen. Vänligen fyll i alla fält för att registrera en ny kund och genomföra bokningen.</em></p>
+<div class="container">
+    <h1 class="text-center" style="margin-bottom: 3rem; margin-top: 5rem;">Välj rum</h1>
+    <div class="form-container">
+        <div th:if="${missingCustomer}">
+            <p><em>Ingen användare hittades med den emailen. Vänligen fyll i alla fält för att registrera en ny
+                kund och genomföra bokningen.</em></p>
+        </div>
+        <form action="createbooking" method="post">
+            <div class="row mb-4 mt-8">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <label class="mb-1" for="email">Email</label>
+                    <input class="form-control" type="email" id="email" name="email" required/>
+                    <!--th:value="${customer.email}"-->
+                </div>
             </div>
-            <form action="createbooking" method="post">
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="email" required/> <!--th:value="${customer.email}"-->
-                <div th:if="${missingCustomer}">
-                <label for="customerName">Namn</label><br>
-                <input type="text" id="customerName" name="customerName" required/><br>
-                <label for="phoneNumber">Telefon</label><br>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required/>
-                </div><br><br>
-                <label for="checkInDate">Inchecknings datum</label>
-                <input type="date" id="checkInDate" name="checkInDate" th:value="${book.checkInDate}" min="2024-01-01" max="2024-12-31" readonly/><br>
-                <label for="checkOutDate">Utchecknings datum</label>
-                <input type="date"  id="checkOutDate" name="checkOutDate" th:value="${book.checkOutDate}" min="2024-01-01" max="2024-12-31" readonly/><br>
-                <label for="bookedBeds">Antal gäster</label>
-                <input type="text" id="bookedBeds" name="bookedBeds" th:value="${book.bookedBeds}" readonly><br>
-                <h5>Tillgängliga rum för valda datum.</h5>
-                    <table>
-                            <th:block th:each="entry : ${listOfRooms}">
-                            <tr>
-                            <td>
-                                <input type="radio" id="roomNumber" name="roomNumber" th:value="${entry.roomNumber}" required>
-                                <label th:for="${entry.roomNumber}"><span th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType} + ' - ' + ${entry.pricePerNight} + 'kr per natt'"></span></label>
-                            </td>
-                            </tr>
-                            </th:block>
+            <div th:if="${missingCustomer}">
+                <div class="row mb-4">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <label class="mb-1" for="customerName">Namn</label>
+                        <input class="form-control" type="text" id="customerName" name="customerName" required/>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <label class="mb-1" for="phoneNumber">Telefon</label>
+                        <input class="form-control" type="tel" id="phoneNumber" name="phoneNumber" required/>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4"></div>
+                <div>
+                    <p th:text="'Incheckningsdatum: '+${book.checkInDate}"></p>
+                    <p th:text="'Utcheckningsdatum: ' + ${book.checkInDate}"></p>
+                    <p th:text="'Antal gäster: ' + ${book.bookedBeds}"></p>
+                    <input type="date" class="form-control-plaintext d-none" id="checkInDate" name="checkInDate" th:value="${book.checkInDate}"/>
+                    <input type="date" class="form-control-plaintext d-none" id="checkOutDate" name="checkOutDate" th:value="${book.checkOutDate}"/>
+                    <input type="number" class="form-control-plaintext d-none" id="bookedBeds" name="bookedBeds" th:value="${book.bookedBeds}">
+                </div>
+            </div>
 
-                            <th:block th:if="${#lists.isEmpty(listOfRooms)}">
-                                <p>Inga tillgängliga rum.</p>
-                                <br>
-                                <button><a href="/book">Gå tillbaka</a></button>
-                            </th:block>
 
-                    </table>
-
-                <th:block th:unless="${#lists.isEmpty(listOfRooms)}">
-                    <br><input type="submit" value="Boka">
+            <div class="row mb-4">
+                <div class="col-md-4"></div>
+                <h5>Tillgängliga rum för valda datum</h5>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4"></div>
+            <table>
+                <th:block th:each="entry : ${listOfRooms}">
+                    <tr>
+                        <td>
+                            <input type="radio" id="roomNumber" name="roomNumber" th:value="${entry.roomNumber}"
+                                   required>
+                            <label th:for="${entry.roomNumber}"><span
+                                    th:text="'Rum ' + ${entry.roomNumber} + ' - ' + ${entry.roomType} + ' - ' + ${entry.pricePerNight} + 'kr per natt'"></span></label>
+                        </td>
+                    </tr>
                 </th:block>
 
+                <th:block th:if="${#lists.isEmpty(listOfRooms)}">
+                    <p>Inga tillgängliga rum.</p>
+                    <br>
+                    <button><a href="/book">Gå tillbaka</a></button>
+                </th:block>
 
-            </form>
-        </td>
-    </tr>
-</table>
+            </table>
+                </div>
+
+
+            <th:block th:unless="${#lists.isEmpty(listOfRooms)}">
+                <br><input type="submit" value="Boka">
+            </th:block>
+
+
+        </form>
+    </div>
+</div>
 </body>
 </html>
