removed unused methods and added th values for confirmation page

--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -8,12 +8,17 @@
 
 <h1>Bokningsbekräftelse</h1>
 
+<p th:text="'Bokningsreferens: ' + ${booking.bookingNr}"></p>
 <p th:text="'Incheckningsdatum: ' + ${booking.checkInDate}"></p>
 <p th:text="'Utcheckningsdatum: ' + ${booking.checkOutDate}"></p>
-<br>
 <p th:text="'Antal gäster: ' + ${booking.bookedBeds}"></p>
 <p th:text="'Rum: ' + ${booking.Room.roomNumber}"></p>
-
+<p th:text="'Rum: ' + ${booking.Room.roomType}"></p>
+<p th:text="'Pris/natt: ' + ${booking.Room.pricePerNight}"></p>
+<p th:text="'Kundreferens:' + ${booking.Customer.customerNumber}"></p>
+<p th:text="'Namn:' + ${booking.Customer.customerName}"></p>
+<p th:text="'Email: ' + ${booking.Customer.email}"></p>
+<p th:text="'Telefon: ' + ${booking.Customer.phoneNumber}"></p>
 
 <p th:text="'Pris: ' + ${totalPrice}"></p>
 <br><br>
