--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -19,11 +19,11 @@
         </div>
         <button type="submit" class="btn btn-primary">Sök</button><br><br>
     </form>
-    <!-- Kundinformation eller formulär för att uppdatera kund -->
+    <!-- Bokningsinformation eller formulär för att uppdatera bokning -->
     <div th:if="${booking}">
         <h2 class="text-center">Ändra bokning</h2>
         <form action="/bookings/update" method="post">
-            <!-- Lägg till ett dolt input-fält för att skicka kundens ID -->
+            <!-- Lägg till ett dolt input-fält för att skicka boknings-ID -->
             <input type="hidden" th:name="id" th:value="${booking.id}">
             <div class="form-group">
                 <label for="bookedBeds">Antal sängar:</label>
@@ -53,7 +53,7 @@
             <a th:href="@{/bookings/delete(id=${booking.id})}" class="btn btn-danger">Ta bort</a>
         </form>
     </div>
-    <!-- Bekräftelsemeddelande för att kunduppgifterna har uppdaterats -->
+    <!-- Bekräftelsemeddelande för att bokningsuppgifterna har uppdaterats -->
     <div th:if="${updated}" id="updatedMessage" class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -61,7 +61,7 @@
         Bokningen har uppdaterats!
     </div>
 
-    <!-- Bekräftelsemeddelande för att kunden har tagits bort -->
+    <!-- Bekräftelsemeddelande för att bokningen har tagits bort -->
     <div th:if="${deleted}" id="deletedMessage" class="alert alert-warning alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -69,7 +69,7 @@
         Bokningen har tagits bort!
     </div>
 
-    <!-- Meddelande om att kunden inte hittades -->
+    <!-- Meddelande om att bokningen inte hittades -->
     <div th:if="${bookingNotFound}" id="bookingNotFoundMessage" class="alert alert-danger alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
