--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-<div class="container"> <!-- Centrerad behållare för navigeringsmenyn -->
+<div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/"><i>Startsida</i></a> <!-- Länk till startsidan -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
