--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -38,6 +38,10 @@
                 <input type="text" class="form-control" id="checkOutDate" name="checkOutDate" th:value="${booking.checkOutDate}" required>
             </div>
             <div class="form-group">
+                <label for="roomType">Rumstyp:</label>
+                <input type="text" class="form-control" id="roomType" name="roomType" th:value="${booking.room != null ? booking.room.roomType : ''}" readonly>
+            </div>
+            <div class="form-group">
                 <label for="bookingCustomerNr">Kundnummer:</label>
                 <input type="text" class="form-control" id="bookingCustomerNr" name="bookingCustomerNr" th:value="${booking.customer != null ? booking.customer.customerNumber : ''}" readonly>
             </div>
@@ -75,6 +79,12 @@
             <span aria-hidden="true">&times;</span>
         </button>
         Vi kunde inte hitta en bokning med det angivna bokningsnumret. Vill du skapa en ny bokning?
+    </div>
+    <div th:if="${errorMessage}" id="roomExceedError" class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <span th:text="${errorMessage}"></span>
     </div>
 </div>
 
