--- a/src/main/resources/templates/error-404.html
+++ b/src/main/resources/templates/error-404.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Error 404</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1> Hoppsan! Vi kunde tyvärr inte hitta sidan du letar efter. </h1>
-<p><a href="/">Gå till startsidan</a></p>
+<div class="container">
+    <h1> Hoppsan! Vi kunde tyvärr inte hitta sidan du letar efter. </h1>
+    <h2 th:text="${message}"></h2>
+    <br>
+    <p><a href="/">Gå till startsidan</a></p>
+</div>
 </body>
 </html>
