--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1> Något gick snett! </h1>
-<h2>Vi jobbar på att fixa det.</h2>
-<p><a href="/">Gå till startsidan</a></p>
+<div>
+    <h1> Något gick snett! </h1>
+    <h2 th:text="${message}"></h2>
+    <br>
+    <p><a href="/">Gå till startsidan</a></p>
+</div>
 </body>
 </html>
