--- a/src/main/resources/templates/errorCVE.html
+++ b/src/main/resources/templates/errorCVE.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div>
+<div class="container">
     <h1> Oops! </h1>
-    <h2 th:text="${error}"></h2>
+    <h2 th:text="${errorMessage}"></h2>
     <br>
     <p><a href="/">Gå till startsidan</a></p>
 </div>
