changed redirect url

--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -89,7 +89,7 @@
 </div>
 
 <div th:if="${bookingNotFound}" class="container mt-4">
-    <a href="/bookings/add" class="btn btn-success">Skapa ny bokning</a>
+    <a href="/book" class="btn btn-success">Skapa ny bokning</a>
     <a href="/bookings/search" class="btn btn-danger">Avbryt</a>
 </div>
 <script>
